[project]
name = "bpl-events-scraper"
version = "0.1.0"
description = "scrapes brooklyn public library's events site to build an ical feed"
authors = [
    {name = "andy",email = "andy@andyhub.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "icalendar (>=6.3.0,<7.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "pyqtwebengine (>=5.15.7,<6.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "lxml (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python-dateutil = "^2.9.0.post0"
